commiting change in status.html

--- a/first_app/templates/first_app/status.html
+++ b/first_app/templates/first_app/status.html
@@ -6,7 +6,7 @@
             <div class="card text-center text-white mb-3" id="investments-total">
                   <div class="card-header">
                       <h5 class="card-title">
-                        Valor Total dos Investimentos
+                        Valor Total dos Investimentos esse mês
                     </h5>
                   </div>
                   <div class="card-body">
