--- a/first_app/templates/first_app/help.html
+++ b/first_app/templates/first_app/help.html
@@ -184,7 +184,7 @@
                         <strong class="text-gray-dark">Salvar Registros</strong>
                     </div>
                     <span class="d-block">Ao clicar em salvar registros, os registros são processados para que você possa visualizar os dados no dashboard e uma nova linha é criada para que caso você 
-                        queira incluir um novo dado, basta preencher essa linha, se não quiser preencher mais nenhuma informação basta clicar no botão "Concluir Inserção". </span>
+                        queira incluir um novo dado, basta preencher essa linha, se não quiser preencher mais nenhuma informação basta clicar no botão "Concluir Inserção" </span>
                 </div>
             </div>
             <div class="media text-muted pt-3">
@@ -192,7 +192,8 @@
                     <div class="d-flex justify-content-between align-items-center w-100">
                         <strong class="text-gray-dark">Concluir Inserção</strong>
                     </div>
-                    <span class="d-block">Ao clicar no botão "Concluir Inserção" você já pode ir para a visualização de dados, onde poderá controlar com detalhes suas finanças pessoais</span>
+                    <span class="d-block">Antes de clicar nesse botâo é importante lembrar de cliccar no botão "Salvar registros primeiro", para que as alteraçãoes sejam armazenadas!</br>
+                        Ao clicar no botão "Concluir Inserção" você já pode ir para a visualização de dados, onde poderá controlar com detalhes suas finanças pessoais</span>
                 </div>
             </div>
         </div>
